PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/ListMustBeInitialized.par
ListMustBeInitialized {

seq test(): [Int]  {
  return [1]
}

seq main() : Void {
    var [Int] a = test()
}
}